--- a/css/main.css
+++ b/css/main.css
@@ -464,7 +464,7 @@ footer .theme-by {
 }
 .intro-header.big-img .page-heading,
 .intro-header.big-img .post-heading {
-  padding: 100px 0;
+  padding: 160px 0 100px 0;
   color: #FFF;
   text-shadow: 1px 1px 3px #000;
 }
