--- a/css/main.css
+++ b/css/main.css
@@ -131,10 +131,18 @@ img {
 
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
-.navbar-custom .nav li a:hover:not(.social-icon),
-.navbar-custom .nav li a:focus:not(.social-icon) {
+.navbar-custom .nav li a:hover,
+.navbar-custom .nav li a:focus{
   color: {{ site.hover-col }};
   background-color: #f0f0f0; /* light grey box */
+}
+
+.navbar-custom .nav {
+  width: 100%;
+}
+
+.navbar-custom .nav li {
+  width: 100%;
 }
 
 .navbar-custom .navbar-brand-logo {
