--- a/css/main.css
+++ b/css/main.css
@@ -248,6 +248,14 @@ img {
   border-width: 0 1px 1px 1px;
   font-weight: normal;
 }
+.navbar-custom .nav .navlinks-container .navlinks-children a {
+  transition: transform 0.2s ease, background-color 0.3s ease, color 0.3s ease;
+}
+
+.navbar-custom .nav .navlinks-container .navlinks-children a:hover {
+  transform: scale(1.05);
+}
+
 
 /* Initial hidden state */
 .navbar-custom .nav .navlinks-children {
@@ -291,6 +299,14 @@ img {
     border: 1px solid #eaeaea;
     border-width: 0 1px 1px;
   }
+  .navbar-custom .nav .navlinks-container .navlinks-children a {
+  transition: transform 0.2s ease, background-color 0.3s ease, color 0.3s ease;
+}
+
+.navbar-custom .nav .navlinks-container .navlinks-children a:hover {
+  transform: scale(1.05);
+}
+
 }
 
 /* --- Footer --- */
