--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ img {
 
 .navbar-custom {
   background-color: {{ site.navbar-col }};
-  border-bottom: none /*1px solid #EAEAEA*/;
+  border-bottom: none;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   {% if site.navbar-img %}
   background-image: url({{ site.navbar-img | relative_url }});
@@ -115,67 +115,46 @@ img {
   {% endif %}
 }
 
-.navbar-custom .nav li a {
-  text-transform: uppercase;
-  font-size: 12px;
-  letter-spacing: 1px;
-}
-
-.navbar-custom .navbar-brand,
-.navbar-custom .nav li a {
-  font-weight: 800;
-  color: {{ site.navbar-text-col }};
-}
-
-.navbar-custom .navbar-brand,
-.navbar-custom .nav li a {
-  font-weight: 800;
-  color: {{ site.navbar-text-col }};
-  transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease;
-}
-
-.navbar-custom .navbar-brand:hover,
-.navbar-custom .navbar-brand:focus,
-.navbar-custom .nav li a:hover,
-.navbar-custom .nav li a:focus {
-  color: {{ site.hover-col }};
-  background-color: #f0f0f0; /* light grey box */
-  display: block;
-  height: 100%;
-  transform: scale(1.1);
-}
-
+/* Navbar link base style */
 .navbar-custom .navbar-brand,
 .navbar-custom .nav li a,
 .navbar-custom .nav .navlinks-container .navlinks-children a {
+  font-weight: 800;
+  color: {{ site.navbar-text-col }};
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 1px;
   border-radius: 6px;
-  transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease, border-radius 0.3s ease;
+  transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease;
 }
 
+/* Hover and focus effects */
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus,
 .navbar-custom .nav .navlinks-container .navlinks-children a:hover,
 .navbar-custom .nav .navlinks-container .navlinks-children a:focus {
-  border-radius: 6px;
+  color: {{ site.hover-col }};
+  background-color: #f0f0f0;
+  transform: scale(1.1);
 }
 
+/* Brand logo transitions */
 .navbar-custom .navbar-brand-logo {
   padding-top: 0;
-  -webkit-transition: padding .5s ease-in-out;
-  -moz-transition: padding .5s ease-in-out;
-  transition: padding .5s ease-in-out;
+  transition: padding 0.5s ease-in-out;
 }
+
 .navbar-custom .navbar-brand-logo img {
   height: 50px;
-  -webkit-transition: height .5s ease-in-out;
-  -moz-transition: height .5s ease-in-out;
-  transition: height .5s ease-in-out;
+  transition: height 0.5s ease-in-out;
 }
+
 .navbar-custom.top-nav-short .navbar-brand-logo {
   padding-top: 5px;
 }
+
 .navbar-custom.top-nav-short .navbar-brand-logo img {
   height: 40px;
 }
