--- a/css/main.css
+++ b/css/main.css
@@ -137,8 +137,25 @@ img {
 .navbar-custom .nav .navlinks-container .navlinks-children a:focus {
   color: {{ site.hover-col }};
   background-color: #f0f0f0;
+}
+
+/* Text-only zoom on hover */
+.navbar-custom .nav li a span,
+.navbar-custom .navbar-brand span,
+.navbar-custom .nav .navlinks-container .navlinks-children a span {
+  display: inline-block;
+  transition: transform 0.3s ease;
+}
+
+.navbar-custom .nav li a:hover span,
+.navbar-custom .nav li a:focus span,
+.navbar-custom .navbar-brand:hover span,
+.navbar-custom .navbar-brand:focus span,
+.navbar-custom .nav .navlinks-container .navlinks-children a:hover span,
+.navbar-custom .nav .navlinks-container .navlinks-children a:focus span {
   transform: scale(1.1);
 }
+
 
 /* Brand logo transitions */
 .navbar-custom .navbar-brand-logo {
