--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,48 +10,47 @@
       {%- if site.title-img -%}
         <a class="navbar-brand navbar-brand-logo" href="{{ '' | absolute_url }}"><img src="{{ site.title-img }}"/></a>
       {%- else -%}
-        <a class="navbar-brand" href="{{ '' | absolute_url }}">{{ site.title }}</a>
+        <a class="navbar-brand" href="{{ '' | absolute_url }}"><span>{{ site.title }}</span></a>
       {%- endif -%}
     </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav navbar-right">
       {%- for link in site.navbar-links -%}
-        {%- if link[1].first %}
+        {%- if link[1].first -%}
           <li class="navlinks-container">
-            <a class="navlinks-parent" href="javascript:void(0)">{{ link[0] }}</a>
+            <a class="navlinks-parent" href="javascript:void(0)"><span>{{ link[0] }}</span></a>
             <div class="navlinks-children">
               {%- for childlink in link[1] -%}
-              {%- for linkparts in childlink %}
-              <a href="{{ linkparts[1] | relative_url }}">{{ linkparts[0] }}</a>
+              {%- for linkparts in childlink -%}
+              <a href="{{ linkparts[1] | relative_url }}"><span>{{ linkparts[0] }}</span></a>
               {%- endfor -%}
-              {%- endfor %}
+              {%- endfor -%}
             </div>
           </li>
-        {% else %}
-          <li><a href="{{ link[1] | relative_url }}">{{ link[0] }}</a></li>
+        {%- else -%}
+          <li><a href="{{ link[1] | relative_url }}"><span>{{ link[0] }}</span></a></li>
         {%- endif -%}
       {%- endfor -%}
       </ul>
     </div>
 
-	{% if page.image and (layout.show-avatar or page.show-avatar) %}
-	<div class="avatar-container">
-	  <div class="avatar-img-border">
-	    <a href="{{ '' | absolute_url }}">
-	      <img class="avatar-img" src="{{ page.image | relative_url }}" />
-		</a>
-	  </div>
-	</div>
-	{% elsif site.avatar and (layout.show-avatar or page.show-avatar) %}
-	<div class="avatar-container">
-	  <div class="avatar-img-border">
-	    <a href="{{ '' | absolute_url }}">
-	      <img class="avatar-img" src="{{ site.avatar | relative_url }}" />
-		</a>
-	  </div>
-	</div>
-	{% endif %}
-
+    {% if page.image and (layout.show-avatar or page.show-avatar) %}
+    <div class="avatar-container">
+      <div class="avatar-img-border">
+        <a href="{{ '' | absolute_url }}">
+          <img class="avatar-img" src="{{ page.image | relative_url }}" />
+        </a>
+      </div>
+    </div>
+    {% elsif site.avatar and (layout.show-avatar or page.show-avatar) %}
+    <div class="avatar-container">
+      <div class="avatar-img-border">
+        <a href="{{ '' | absolute_url }}">
+          <img class="avatar-img" src="{{ site.avatar | relative_url }}" />
+        </a>
+      </div>
+    </div>
+    {% endif %}
   </div>
 </nav>
