--- a/css/main.css
+++ b/css/main.css
@@ -427,6 +427,17 @@ footer .theme-by {
   font-weight: 300;
   margin-bottom: 10px;
 }
+.post-preview .post-title a,
+.post-preview .post-subtitle a {
+  display: inline-block; /* for transform */
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.post-preview .post-title a:hover,
+.post-preview .post-subtitle a:hover {
+  transform: scale(1.05);
+  color: {{ site.hover-col }};
+}
 .post-preview .post-meta,
 .post-heading .post-meta {
   color: #808080;
