--- a/css/main.css
+++ b/css/main.css
@@ -427,23 +427,16 @@ footer .theme-by {
   font-weight: 300;
   margin-bottom: 10px;
 }
-.post-preview .post-title a,
-.post-preview .post-subtitle a {
+.post-preview .post-title a {
   display: inline-block; /* for transform */
   transition: transform 0.3s ease, color 0.3s ease;
 }
-.post-preview .post-title a:hover,
-.post-preview .post-subtitle a:hover {
+
+.post-preview .post-title a:hover {
   transform: scale(1.05);
   color: {{ site.hover-col }};
 }
-.post-preview .post-title:hover,
-.post-preview .post-subtitle:hover {
-  transform: scale(1.05);
-  color: {{ site.hover-col }};
-  transition: transform 0.3s ease, color 0.3s ease;
-  display: inline-block;
-}
+
 .post-preview .post-meta,
 .post-heading .post-meta {
   color: #808080;
