--- a/css/main.css
+++ b/css/main.css
@@ -390,18 +390,17 @@ footer .theme-by {
   }
 }
 
-/* --- Post preview --- */
-
-.post-preview {
-  padding: 20px 0;
-  border-bottom: 1px solid #eee;
-  transition: transform 0.3s ease; /* <-- add this */
+.post-preview-link {
+  display: block;
+  transition: transform 0.3s ease;
 }
-.post-preview:hover {
+
+.post-preview-link:hover {
   transform: scale(1.03);
   z-index: 1;
   position: relative;
 }
+
 
 @media only screen and (min-width: 768px) {
   .post-preview {
