--- a/css/main.css
+++ b/css/main.css
@@ -392,6 +392,8 @@ footer .theme-by {
 
 .post-preview-link {
   display: block;
+  padding-left: 20px;
+  padding-right: 20px;
   transition: transform 0.3s ease, box-shadow 0.3s ease, border-radius 0.3s ease; 
   color: inherit;         /* preserve text color */
   text-decoration: none;  /* remove underline */
@@ -410,8 +412,6 @@ footer .theme-by {
   color: inherit;
   text-decoration: none;
 }
-
-
 
 @media only screen and (min-width: 768px) {
   .post-preview {
